src/container/editor.scss
/**
 * The following styles get applied inside the editor only.
 */

.wp-block-sortable-container {
	& > .block-list-appender {
		position: relative;
		right: auto;
		align-self: center;
		list-style: none;
		line-height: inherit;

		& .block-editor-button-block-appender {
			flex-direction: row;

			&::after {
				content: attr(aria-label);
			}
		}
	}

	& .block-editor-button-block-appender {
		margin-block: 1rem;
	}
}

